Update disclaimer text, and make sure it doesn't get cut off above the window.

--- a/src/editor/assignment-question/components/Question.scss
+++ b/src/editor/assignment-question/components/Question.scss
@@ -34,11 +34,11 @@
 					position: absolute;
 					bottom: 100%;
 					left: -1px; right: -1px;
-					margin-bottom: 10px;
-					background-color: $secondary-grey;
+					margin-bottom: 20px;
+					background-color: $transparent-dark-background;
 					color: white;
-					padding: 0.5rem 0.9375rem;
-					font: normal 400 0.875rem/1 $body-font-family;
+					padding: 0.625rem 0.9375rem;
+					font: normal 300 0.875rem/1.25rem $body-font-family;
 				}
 			}
 
